# Agent_Lens

./: .env.example  .gitignore  AGENTS.md  Architecture.md  README.md  agentlens.config.yaml  implementation.md  plan.md  prd.md  render.yaml
.codex/: hooks.json
backend/: Dockerfile  pyproject.toml
backend/src/agentlens/: __init__.py  analytics.py  api.py  app_server_terminal.py  audit.py  cli.py  codex_hook.py  codex_proxy.py  codex_terminal.py  config.py  db.py  dev_stack.py  episodes.py  guard.py  intelligence.py  model_routing.py  policy.py  risk.py  schemas.py  session.py  simulator.py  slack.py  storage.py  trace.py
backend/src/agentlens/adapters/: __init__.py  codex_app_server.py  codex_cli.py
backend/tests/: test_analytics.py  test_audit.py  test_codex_adapter.py  test_codex_app_server.py  test_codex_hook.py  test_codex_proxy.py  test_db.py  test_dev_stack.py  test_model_routing.py  test_openai_integration.py  test_persistent_storage.py  test_policy_risk.py  test_session_api.py  test_slack.py
docs/: competition_demo.md  demo_video_script.md  deployment.md  live_validation.md  system_context.md
examples/: demo_session.json
frontend/: .env.example  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx  types.ts  utils.ts
frontend/app/components/: flow-map-view.tsx  ledger-ui.tsx
presentation_assets/: agentlens_decoded_action.html
scripts/: competition_demo.sh
