[project]
name = "agentlens"
version = "0.1.0"
description = "A judgment layer for AI coding agents."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "pyyaml>=6.0.2",
  "httpx>=0.27.0",
  "openai>=1.40.0",
  "sqlalchemy[asyncio]>=2.0.32",
  "asyncpg>=0.29.0",
  "redis>=5.0.8",
  "networkx>=3.3",
  "libcst>=1.4.0",
  "tree-sitter>=0.22.0",
]

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.6.0",
]

[project.scripts]
agentlens-demo = "agentlens.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: tests that call external services such as OpenAI",
]

[tool.ruff]
line-length = 100
target-version = "py311"
